# nageones

./: .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc.json  README.md  components.d.ts  eslint.config.js  index.html  jsconfig.json  package.json  vite.config.js
public/model/building/: soldier.glb
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  service.rs
src/api/: index.js
src/assets/: base.css  main.css  user.less
src/common/: request.js
src/common/tool/: index.js
src/router/: index.js
src/views/login/: index.vue
src/views/ones/: api.js  index.vue  store.js
